--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,5 @@ install:
   - sudo apt-get install libqt4-dev qt4-qmake
 
 script:
-  - qmake -project
-  - qmake hello.pro
+  - qmake qreal.pro
   - make
