--- a/qrmc/templates/pluginInterface.h.template
+++ b/qrmc/templates/pluginInterface.h.template
@@ -48,6 +48,7 @@ public:
 	virtual QString getPropertyType(QString const &element, QString const &property) const;
 	virtual QString getPropertyDefaultValue(QString const &element, QString const &property) const;
 	virtual QStringList getPropertyNames(QString const &diagram, QString const &element) const;
+	virtual QStringList getReferenceProperties(QString const &/*diagram*/, QString const &element) const;
 	virtual QStringList getEnumValues(QString name) const;
 
 	virtual QString editorName() const;
