testing tool for qrmc, qrxc and interpreter without testing, mkay? nameOfTheDirectory is moved to compiler settings

--- a/qrmc/templates/elements.h.template
+++ b/qrmc/templates/elements.h.template
@@ -3,10 +3,10 @@
 #include <QBrush>
 #include <QPainter>
 
-#include "../../../qrgui/editorPluginInterface/elementImpl.h"
-#include "../../../qrgui/editorPluginInterface/elementTitleHelpers.h"
-#include "../../../qrgui/editorPluginInterface/elementRepoInterface.h"
-#include "../../../qrgui/umllib/element.h"
+#include "@@PathToSources@@qrgui/editorPluginInterface/elementImpl.h"
+#include "@@PathToSources@@qrgui/editorPluginInterface/elementTitleHelpers.h"
+#include "@@PathToSources@@qrgui/editorPluginInterface/elementRepoInterface.h"
+#include "@@PathToSources@@qrgui/umllib/element.h"
 
 @@NodesList@@
 
