paths managed at last methods tester, testing first methods (diagrams, editor name)

--- a/qrmc/templates/pro.template
+++ b/qrmc/templates/pro.template
@@ -8,5 +8,6 @@ HEADERS += pluginInterface.h \
 RESOURCES += plugin.qrc
 
 ROOT = @@PathToSources@@
+DESTINATION = @@Destination@@
 include (@@PathToSources@@plugins/editorsSdk/pluginsCommon.pri)
                         
