--- a/qrmc/templates/utils.template
+++ b/qrmc/templates/utils.template
@@ -5,7 +5,8 @@
 @@InitPropertyNamesMapLine@@=	propertiesDisplayedNamesMap["@@DiagramName@@"]["@@ElementName@@"]["@@PropertyName@@"] = QString::fromUtf8("@@PropertyDisplayedName@@");
 @@InitPropertyTypesMapLine@@=	propertyTypes["@@ElementName@@"]["@@PropertyName@@"] = "@@PropertyType@@";
 @@InitPropertyDefaultMapLine@@=	propertyDefault["@@ElementName@@"]["@@PropertyName@@"] = "@@PropertyDefaultValue@@";
-@@InitParentsMapLine@@=	parentsMap["@@DiagramName@@"]["@@ChildElementName@@"] << qMakePair(QString("@@DiagramName@@"), QString("@@ParentElementName@@")); 	
+@@InitParentsMapLine@@=	parentsMap["@@DiagramName@@"]["@@ChildElementName@@"] << qMakePair(QString("@@DiagramName@@"), QString("@@ParentElementName@@"));
+@@InitDescriptionMapLine@@=	elementsDescriptionMap["@@DiagramName@@"]["@@ElementName@@"] = QString::fromUtf8("@@Description@@"); 	
 @@GetGraphicalObjectLine@@=	if (element == "@@ElementName@@")\n		return new @@ElementName@@();
 @@GetPropertyNamesLine@@=	if (element == "@@ElementName@@")\n		result  << @@PropertiesList@@;
 @@GetContainedByLine@@=	if (element == "@@ElementName@@")\n		result @@ContainedByList@@;
