added onButtonClickedGeneration and startFormNameGeneration for 'generateMainForms'

--- a/plugins/qUbiq/qUbiqGenerator/templates/utils.template
+++ b/plugins/qUbiq/qUbiqGenerator/templates/utils.template
@@ -10,6 +10,12 @@
 			Screen.Content = Create@@toFormName@@();
 		}
 ==========
+@@oneOnExitButtonClickedDescription@@
+		void On@@buttonName@@Clicked()
+		{
+			Exit();
+		}
+==========
 @@oneVariableDeclaration@@
 	public static @@variableType@@ @@variableName@@ {get; set;}
 ==========
