some fixes in templates (fixed 'exitButton')

--- a/plugins/qUbiq/qUbiqGenerator/templates/utils.template
+++ b/plugins/qUbiq/qUbiqGenerator/templates/utils.template
@@ -39,7 +39,7 @@
 @@oneOnExitButtonClickedDescription@@
 		void On@@buttonName@@Clicked()
 		{
-			Exit();
+			Screen.Content = CreateExitForm();
 		}
 ==========
 @@oneVariableDeclaration@@
