fixed Image generation; added List generation (list elements are only text, image and button) added Grid generation (_._, only one grid element); added base of button handlers from list and grid

--- a/plugins/qUbiq/examples/projects/XOProgram/XOProgram.csproj
+++ b/plugins/qUbiq/examples/projects/XOProgram/XOProgram.csproj
@@ -38,7 +38,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-      <Compile Include="XOProgramForms.cs" />
+    <Compile Include="XOProgramForms.cs" />
     <Compile Include="XOProgramVariables.cs" />
 
   </ItemGroup>
@@ -56,6 +56,7 @@
       <HintPath>$(UBIQ_HOME)\MApp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+	<Reference Include="System.Drawing" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
