deleted "path to QReal sources" from properties and added them to compiler settings added ability to choose configuration parameters (release or debug build) made editorPluginTestTool compilable again added new method to qrmc(getGroupsXML) added generation of html page representing results of testing qrmc and qrxc

--- a/qrmc/templates/edge.template
+++ b/qrmc/templates/edge.template
@@ -2,7 +2,7 @@
 	public:
 		void init(QRectF &, QList<StatPoint> &, QList<StatLine> &,
 				ElementTitleFactoryInterface &, QList<ElementTitleInterface*> &,
-				SdfRendererInterface *, SdfRendererInterface *) {}
+				SdfRendererInterface *, SdfRendererInterface *, ElementRepoInterface *) {}
 
 		void init(ElementTitleFactoryInterface &factory, QList<ElementTitleInterface*> &titles)
 		{
