--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,13 @@ compiler: gcc
 install:
   - sudo add-apt-repository ppa:canonical-qt5-edgers/qt5-proper -y
   - sudo add-apt-repository ppa:ubuntu-sdk-team/ppa -y
+  - sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu raring universe"
+  - sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu raring main"
   - sudo apt-get update
-  - sudo apt-get install qt-sdk libqt5svg5-dev qttools5-dev qtscript5-dev -y
-
+  - sudo apt-get install libboost-system1.49.0 libboost-wave1.49.0 tcl8.5
+  - sudo apt-get install vera++
+  - sudo apt-get install qdbus qmlscene qt5-default qt5-qmake qtbase5-dev-tools qtchooser qtdeclarative5-dev xbitmaps xterm libqt5svg5-dev qttools5-dev -y
+  
 script:
   - qmake qreal.pro
   - make -j2
@@ -19,8 +23,6 @@ script:
   - ./bin/unittests/qrlibs_unittests
   - ./bin/unittests/qrgui_unittests
   - ./bin/unittests/qrxc_unittests
-
-notifications:
-  email:
-    recipients:
-      - qreal-build-reports@googlegroups.com
+  - sudo sh buildScripts/vera++/CopyToVLib.sh
+  - tclsh buildScripts/vera++/generatePaths.tcl
+  - vera++ -profile allRules - <buildScripts/vera++/params
