--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script:
   - sudo sh buildScripts/vera++/CopyToVLib.sh
   - tclsh buildScripts/vera++/generatePaths.tcl
   - touch log
-  - vera++ -profile allRules - <buildScripts/vera++/params > log
+  - vera++ -profile allRules - <buildScripts/vera++/params | tee log
   - tclsh buildScripts/vera++/checkErrors.tcl
   - qmake qreal.pro
   - make -j2
