--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,11 @@ install:
   - sudo apt-get install qdbus qmlscene qt5-default qt5-qmake qtbase5-dev-tools qtchooser qtdeclarative5-dev xbitmaps xterm libqt5svg5-dev qttools5-dev -y
   
 script:
+  - vera++ -version
   - sudo sh buildScripts/vera++/CopyToVLib.sh
   - tclsh buildScripts/vera++/generatePaths.tcl
   - touch log
-  - vera++ -profile allRules - <buildScripts/vera++/params | tee log
+  - vera++ --error -profile allRules - <buildScripts/vera++/params | tee log
   - tclsh buildScripts/vera++/checkErrors.tcl
   - qmake qreal.pro
   - make -j2
