--- a/qrmc/templates/utils.template
+++ b/qrmc/templates/utils.template
@@ -26,7 +26,7 @@
 @@NodeSetContents@@=			contents.setWidth(@@NodeWidth@@);\n			contents.setHeight(@@NodeHeight@@);\n			StatPoint pt;
 @@NodeInitPointPort@@=			pt.point = QPointF(@@PointX@@, @@PointY@@); \n			pointPorts << pt;
 @@NodeInitLinePort@@=		{\n			StatLine ln;\n			ln.line = QLineF(@@StartX@@, @@StartY@@, @@EndX@@, @@EndY@@);\n			ln.prop_x1 = @@NodeLinePortStartXScalable@@;\n			ln.prop_y1 = @@NodeLinePortStartYScalable@@;\n			ln.prop_x2 = @@NodeLinePortEndXScalable@@;\n			ln.prop_y2 = @@NodeLinePortEndYScalable@@;\n			linePorts << ln;\n		};
-@@NodeInit@@=			title_@@Count@@ = factory.createTitle(@@LabelX@@, @@LabelY@@, @@LabelName@@);\n			title_@@Count@@->setBackground(Qt::transparent);\n			title_@@Count@@->setScaling(@@XCoordIsScalable@@, @@YCoordIsScalable@@);\n			title_@@Count@@->setFlags(0);\n			title_@@Count@@->setTextInteractionFlags(Qt::NoTextInteraction);\n			titles.append(title_@@Count@@);
+@@NodeInit@@=			title_@@Count@@ = factory.createTitle(@@LabelX@@, @@LabelY@@, QString::fromUtf8(@@LabelName@@), 0);\n			title_@@Count@@->setBackground(Qt::transparent);\n			title_@@Count@@->setScaling(@@XCoordIsScalable@@, @@YCoordIsScalable@@);\n			title_@@Count@@->setFlags(0);\n			title_@@Count@@->setTextInteractionFlags(Qt::NoTextInteraction);\n			titles.append(title_@@Count@@);
 @@NodeValidBorder@@=			list << 30 << 15 << 15 << 25;
 @@NodeInvalidBorder@@=			list << 0 << 0 << 0 << 0;
 @@PortsSdf@@=<picture sizex="@@NodeWidth@@" sizey="@@NodeHeight@@" >\n@@Ports@@\n</picture>
