--- a/qrmc/templates/edge.template
+++ b/qrmc/templates/edge.template
@@ -1,10 +1,10 @@
 	class @@ElementName@@ : public ElementImpl {
 	public:
 		void init(QRectF &, QList<StatPoint> &, QList<StatLine> &,
-				ElementTitleFactoryInterface &, QList<ElementTitleInterface*> &,
+				LabelFactoryInterface &, QList<LabelInterface*> &,
 				SdfRendererInterface *, SdfRendererInterface *, ElementRepoInterface *) {}
 
-		void init(ElementTitleFactoryInterface &factory, QList<ElementTitleInterface*> &titles)
+		void init(LabelFactoryInterface &factory, QList<LabelInterface*> &titles)
 		{
 @@EdgeInit@@
 		}
