--- a/.travis.yml
+++ b/.travis.yml
@@ -16,12 +16,12 @@ script:
   - git clean -dfx
   - qmake qrealTest.pro CONFIG+=debug
   - make -j2
-  - cd ./bin/unittests/
-  - exampleTests
-  - qrgui_unttests
-  - qrrepo_unittests
-  - qrutils_unittests
-  - visualDebugSupport_unittests
+  - cd ./bin
+  - ./exampleTests
+  - ./qrgui_unttests
+  - ./qrrepo_unittests
+  - ./qrutils_unittests
+  - ./visualDebugSupport_unittests
 
 notifications:
   email:
