--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,8 @@ script:
   - cd ./bin
   - ls -A
   - ./exampleTests
-  - ./qrgui_unittests
+  - ./qrgui_unittests -platform offscreen
+  - ./qrgui_unittests -platform minimal
   - ./qrrepo_unittests
   - ./qrutils_unittests
   - ./visualDebugSupport_unittests
