make travis install Xvfb to run widgets-dependent tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ install:
   - sudo add-apt-repository ppa:ubuntu-sdk-team/ppa -y
   - sudo apt-get update
   - sudo apt-get install qt-sdk libqt5svg5-dev qttools5-dev qtscript5-dev -y
+  - sudo apt-get install xvfb
+  - Xvfb :0 &
+  - export DISPLAY=:0
 
 script:
   - qmake qreal.pro
