templates for elements from logical diagram initial method for generation of arrow code

--- a/plugins/gameEditor/gameGenerator/templates/utils.template
+++ b/plugins/gameEditor/gameGenerator/templates/utils.template
@@ -12,3 +12,12 @@
 				curState = @@rightHandFrameName@@;
 				break;
 ==========
+@@codeArea@@
+	@@inlineCode@@
+==========
+@@Terminate@@
+
+==========
+@@EndState@@
+	curState=@@StateName@@;
+==========
