names of edges as names for innerswitch cases some problems with generator

--- a/plugins/gameEditor/gameGenerator/templates/utils.template
+++ b/plugins/gameEditor/gameGenerator/templates/utils.template
@@ -8,7 +8,8 @@
 		break;
 ==========
 @@outconnectedFrameCase@@
-			case @@rightHandFrameName@@:
+			case @@edgeName@@:
+				@@codeTemplate@@
 				curState = @@rightHandFrameName@@;
 				break;
 ==========
