template renames arrow generation of codearea and endstate blocks

--- a/plugins/gameEditor/gameGenerator/templates/utils.template
+++ b/plugins/gameEditor/gameGenerator/templates/utils.template
@@ -16,9 +16,9 @@
 @@codeArea@@
 	@@inlineCode@@
 ==========
-@@Terminate@@
+@@terminate@@
 
 ==========
-@@EndState@@
-	curState=@@StateName@@;
+@@endState@@
+	curState=@@stateName@@;
 ==========
