--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ install:
   - sudo apt-get install xvfb
   - Xvfb :0 &
   - export DISPLAY=:0
+  - export CXX=g++-4.8 && export CC=gcc-4.8
 
 script:
-  - gcc --version
   - tclsh buildScripts/vera++/generatePaths.tcl
   - vera++ --error -p allRules --root buildScripts/vera++ <buildScripts/vera++/params
   - qmake qreal.pro
