--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,25 @@
 language: cpp
 compiler: gcc
 install:
+  - if [ "$CXX" = "g++" ]; then sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y; fi
+  - if [ "$CXX" = "g++" ]; then sudo apt-get update -qq; fi
+  - if [ "$CXX" = "g++" ]; then sudo apt-get install g++-4.8; fi
+  - if [ "$CXX" = "g++" ]; then sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 50; fi
+  - if [ "$CXX" = "g++" ]; then sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 50; fi
   - sudo add-apt-repository ppa:canonical-qt5-edgers/qt5-proper -y
   - sudo add-apt-repository ppa:ubuntu-sdk-team/ppa -y
   - sudo add-apt-repository ppa:smspillaz/verapp-latest -y
   - sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu raring universe"
   - sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu raring main"
-  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
   - sudo apt-get update
   - sudo apt-get install libboost-system1.49.0 libboost-wave1.49.0 tcl8.5
   - sudo apt-get install vera++
   - sudo apt-get install qdbus qmlscene qt5-default qt5-qmake qtbase5-dev-tools qtchooser qtdeclarative5-dev xbitmaps xterm libqt5svg5-dev qttools5-dev qtscript5-dev -y
-  - sudo apt-get install gcc-4.8
   - sudo apt-get install xvfb
   - Xvfb :0 &
   - export DISPLAY=:0
 
 script:
-  - alias g++=g++-4.8
   - tclsh buildScripts/vera++/generatePaths.tcl
   - vera++ --error -p allRules --root buildScripts/vera++ <buildScripts/vera++/params
   - qmake qreal.pro
